--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "type": "module",
     "dependencies": {
         "csv-parse": "^5.3.1",
-        "fs": "^0.0.1-security",
+        "fs": "^0.0.1-security"
     }
 }
